# AgentLens

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_metadata.py  0002_view_config_trajectory_source.py  0003_backfill_trajectory_config_source.py  0004_reset_legacy_trajectory_config_source.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  admin.py  connections.py  execute.py  export.py  health.py  label_schemas.py  labels.py  queries.py  query_history.py  render_rules.py  trajectories.py  view_configs.py
backend/app/core/: __init__.py  config.py  crypto.py  errors.py  executor_registry.py  logging.py  scheduler.py  sql_guard.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  connection.py  label.py  llm.py  misc.py  named_query.py  view_config.py
backend/app/schemas/: __init__.py  common.py  connection.py  datetime.py  execution.py  export.py  (+7 more)
backend/tests/: conftest.py  test_admin.py  test_cleanup.py  test_connections.py  test_execute_api.py  test_export_service.py  test_health.py  test_inferred_type.py  test_label_schemas_api.py  test_labels_api.py  test_queries_api.py  test_query_executor.py  test_render_rule_service.py  test_render_rules_api.py  test_render_suggestion.py  test_row_identity.py  test_scheduler.py  test_sql_guard.py  test_static_frontend.py  test_trajectories_api.py  test_trajectory_service.py  test_view_configs_api.py
(+128 files in other folders)
