[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "AgentLens-backend"
version = "0.1.0"
description = "Backend service for AgentLens."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "pydantic>=2",
  "pydantic-settings",
  "alembic",
  "sqlparse",
  "cryptography",
  "httpx",
  "pymysql",
  "python-multipart",
  "loguru",
  "apscheduler",
  "openpyxl",
  "tiktoken",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "httpx",
  "ruff",
  "mypy",
]

[project.scripts]
agentlens = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"alembic" = "alembic"
"alembic.ini" = "alembic.ini"

[tool.hatch.build.targets.sdist]
include = [
  "/app",
  "/alembic",
  "/alembic.ini",
  "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PIE",
  "PL",
  "PTH",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "ANN401",
  "PLR0913",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^alembic/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
